--- a/WpfViewer/WpfViewer.csproj
+++ b/WpfViewer/WpfViewer.csproj
@@ -11,9 +11,13 @@
   <ItemGroup>
     <PackageReference Include="HelixToolkit" Version="2.25.0" />
     <PackageReference Include="HelixToolkit.Wpf" Version="2.25.0" />
-    <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.25.0" />
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\FileVersionControl\FileVersionControl.Core.csproj" />
   </ItemGroup>
 
 </Project>
